--- a/finalwebstocks.html
+++ b/finalwebstocks.html
@@ -114,7 +114,7 @@
 <body>
   <!-- Logo and Text -->
   <div class="logo-container">
-    <img class="logo" src="C:\Users\USER\Downloads\webstocks.png" alt="Logo">
+    <img class="logo" src="webstocks logo.jpg" alt="Logo">
     <span class="logo-text">webstocks.com</span>
   </div>
 
@@ -127,9 +127,9 @@
     </div>
     <div class="sidebar-content">
     <ul class="menu">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Checklist</a></li>
-    <li><a href="#">Expert Meet</a></li>
+    <li><a href="finalwebstocks.html">Home</a></li>
+    <li><a href="checklist.html">Checklist</a></li>
+    <li><a href="expertmeet.html">Expert Meet</a></li>
     <li><a href="https://sites.google.com/view/webstock4/home">Financial Calculators</a></li>
     </ul>
     </div>
@@ -139,16 +139,15 @@
   <!-- Menu Bar -->
   <div id="menu">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Learn</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="finalwebstocks.html">Home</a></li>
+      <li><a href="learn page.html">Learn</a></li>
+      <li><a href="about us.html">About Us</a></li>
     </ul>
   </div>
 
   <!-- Image -->
   <div id="image">
-    <img src="C:\Users\USER\Downloads\webstocks\Webstock bgimage.jpg" alt="Webstocks Image">
+    <img src="Webstock bgimage.jpg" alt="Webstocks Image">
   </div>
   <!-- Content Section -->
   <div class="content">
