--- a/about us.html
+++ b/about us.html
@@ -71,22 +71,13 @@ navul li {
 <body>
      <!-- Logo and Text -->
   <div class="logo-container">
-    <img class="logo" src="C:\Users\USER\Downloads\webstocks.png" alt="Logo">
+    <img class="logo" src="webstocks logo.jpg" alt="Logo">
     <span class="logo-text">webstocks.com</span>
   </div>
 
 <header>
 <h1>Webstocks</h1>
 </header>
-
-<nav>
-<ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">About</a></li>
-<li><a href="#">Services</a></li>
-<li><a href="#">Contact</a></li>
-</ul>
-</nav>
 
 <section>
 <h2>About Us</h2>
