--- a/checklist.html
+++ b/checklist.html
@@ -46,7 +46,7 @@
 <body>
   <!-- Logo and Text -->
   <div class="logo-container">
-    <img class="logo" src="C:\Users\USER\Downloads\webstocks.png" alt="Logo">
+    <img class="logo" src="webstocks logo.jpg" alt="Logo">
     <span class="logo-text">webstocks.com</span>
   </div>
 
