--- a/expertmeet.html
+++ b/expertmeet.html
@@ -63,7 +63,7 @@
 
      <!-- Logo and Text -->
   <div class="logo-container">
-    <img class="logo" src="C:\Users\USER\Downloads\webstocks.png" alt="Logo">
+    <img class="logo" src="webstocks logo.jpg" alt="Logo">
     <span class="logo-text">webstocks.com</span>
   </div>
 
