--- a/learn page.html
+++ b/learn page.html
@@ -57,7 +57,7 @@ color: #888;
 <body>
 <!-- Logo and Text -->
 <div class="logo-container">
-    <img class="logo" src="C:\Users\USER\Downloads\webstocks.png" alt="Logo">
+    <img class="logo" src="webstocks logo.jpg" alt="Logo">
     <span class="logo-text">webstocks.com</span>
   </div>
 
