--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <div class="sidebar-content">
     <ul class="menu">
-    <li><a href="finalwebstocks.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="checklist.html">Checklist</a></li>
     <li><a href="expertmeet.html">Expert Meet</a></li>
     <li><a href="https://sites.google.com/view/webstock4/home">Financial Calculators</a></li>
@@ -139,7 +139,7 @@
   <!-- Menu Bar -->
   <div id="menu">
     <ul>
-      <li><a href="finalwebstocks.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="learn page.html">Learn</a></li>
       <li><a href="about us.html">About Us</a></li>
     </ul>
